Rudimentary hex dump in the HTML output

--- a/polyfile/templates/template.html
+++ b/polyfile/templates/template.html
@@ -3,114 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>PolyFile | {{file_path}}</title>
-    <!--<script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>-->
+    <script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <style>
-body {
-  margin: 30px;
-  font-family: sans-serif;
-}
-
-.tree { margin: 1em; }
-
-.tree input {
-  position: absolute;
-  clip: rect(0, 0, 0, 0);
-}
-
-.tree input ~ ul { display: none; }
-
-.tree input:checked ~ ul { display: block; }
-
-.tree li {
-  line-height: 1.2;
-  position: relative;
-  padding: 0 0 1em 1em;
-}
-
-.tree ul {  padding-inline-start: 0px; }
-
-.tree ul li { padding: 1em 0 0 1em; list-style-type: none; }
-
-.tree > li:last-child { padding-bottom: 0; }
-
-.tree_label {
-  position: relative;
-  display: inline-block;
-  background: #fff;
-}
-
-label.tree_label { cursor: pointer; }
-
-label.tree_label:hover { color: #666; }
-
-label.tree_label:before {
-  background: #000;
-  color: #fff;
-  position: relative;
-  z-index: 1;
-  float: left;
-  margin: 0 1em 0 -2em;
-  width: 1em;
-  height: 1em;
-  border-radius: 1em;
-  content: '+';
-  text-align: center;
-  line-height: .9em;
-  }
-
-:checked ~ label.tree_label:before { content: '–'; }
-
-.tree li:before {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: -.5em;
-  display: block;
-  width: 0;
-  border-left: 1px solid #777;
-  content: "";
-}
-
-.tree_label:after {
-  position: absolute;
-  top: 0;
-  left: -1.5em;
-  display: block;
-  height: 0.5em;
-  width: 1em;
-  border-bottom: 1px solid #777;
-  border-left: 1px solid #777;
-  border-radius: 0 0 0 .3em;
-  content: '';
-}
-
-label.tree_label:after { border-bottom: 0; }
-
-:checked ~ label.tree_label:after {
-  border-radius: 0 .3em 0 0;
-  border-top: 1px solid #777;
-  border-right: 1px solid #777;
-  border-bottom: 0;
-  border-left: 0;
-  bottom: 0;
-  top: 0.5em;
-  height: auto;
-}
-
-.tree li:last-child:before {
-  height: 1em;
-  bottom: auto;
-}
-
-.tree > li:last-child:before { display: none; }
-
-.tree_custom {
-  display: block;
-  background: #eee;
-  padding: 1em;
-  border-radius: 0.3em;
-}
+{% include "hexdump.css" %}
     </style>
+    <script type="text/javascript">
+        /* BEGIN JQUERY */
+{% include "jquery-3.4.1.min.js" %}
+        /* END JQUERY */
+    </script>
+    <script type="text/javascript">
+{% include "hexdump.js" %}
+    </script>
 </head>
 <body>
 {% macro render_match(match, first) -%}
@@ -133,5 +37,23 @@ label.tree_label:after { border-bottom: 0; }
         {{ render_match(match, True) }}
     {% endfor %}
 </ul>
+
+<div class="hexeditor">
+    <div class="hexdump">
+        <span class="byterow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+        {% for col in range(16) %}<span class="byte" style="color:gray">{{ '%02x' % col }}</span>{% endfor %}
+        <br />
+{% for row in range(input_bytes // 16 + 1) %}
+<span class="byterow">{{ '%05x' % row }}</span>
+{% for col in range(16) %}<span class="byte" id="hexbyte{{ input_file.tell() }}">{{ input_file.read(1).hex() }}</span>{% endfor %}<br />
+{% endfor %}
+    </div>
+    <div class="bytes">
+        <br />
+{% for row in range(input_bytes // 16 + 1) %}
+{% for col in range(16) %}<span class="byte" id="byte{{ read_unicode.tell() }}">{{ read_unicode() }}</span>{% endfor %}<br />
+{% endfor %}
+    </div>
+</div>
 </body>
 </html>
