--- a/polyfile/templates/template.html
+++ b/polyfile/templates/template.html
@@ -32,6 +32,7 @@
     {% endif %}
 </li>
 {%- endmacro %}
+
 <ul class="tree">
     {% for match in matches %}
         {{ render_match(match, True) }}
@@ -39,25 +40,33 @@
 </ul>
 
 <div class="hexeditor">
-    <div class="hexdump">
-        <span class="byterow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-        {% for col in range(16) %}<span class="byte" style="color:gray">{{ '%02x' % col }}</span>{% endfor %}
-        <br />
-{% for row in range(input_bytes // 16 + 1) %}
-<div class="byteline"><span class="byterow">{{ '%05x' % row }}</span>
-{% for col in range(16) %}<span class="byte" byteid="{{ input_file.tell() }}">{{ input_file.read(1).hex() }}</span>{% endfor %}</div>
-{% endfor %}
+    <div class="scrollcapture">
+        <div class="hexdump">
+            <span class="byterow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+            {% for col in range(16) %}<span class="byte" style="color:gray">{{ '%02x' % col }}</span>{% endfor %}
+            <br />
+    {% for row in range(input_bytes // 16 + 1) %}
+    <div class="byteline"><span class="byterow">{{ '%05x' % row }}</span>
+    {% for col in range(16) %}<span class="byte" byteid="{{ input_file.tell() }}">{{ input_file.read(1).hex() }}</span>{% endfor %}</div>
+    {% endfor %}
+        </div>
+        <div class="bytes">
+            <br />
+    {% for row in range(input_bytes // 16 + 1) %}
+            <div class="byteline">{% for col in range(16) %}<span class="byte" byteid="{{ read_unicode.tell() }}">{{ read_unicode() }}</span>{% endfor %}</div>
+    {% endfor %}
+        </div>
     </div>
-    <div class="bytes">
-        <br />
-{% for row in range(input_bytes // 16 + 1) %}
-        <div class="byteline">{% for col in range(16) %}<span class="byte" byteid="{{ read_unicode.tell() }}">{{ read_unicode() }}</span>{% endfor %}</div>
-{% endfor %}
+    <div class="scrollcontainer">
+        <div class="scrollheightproxy"></div>
     </div>
 </div>
 
+{#
 <div class="rawdump">
 {% for i, byte in read_unicode %}<span class="byte" byteid="{{ i }}">{{ byte|safe }}</span>{% endfor %}
 </div>
+#}
+
 </body>
 </html>
