--- a/polyfile/templates/template.html
+++ b/polyfile/templates/template.html
@@ -42,19 +42,20 @@
 <div class="hexeditor">
     <div class="scrollcapture">
         <div class="hexdump">
-            <span class="byterow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-            {% for col in range(16) %}<span class="byte" style="color:gray">{{ '%02x' % col }}</span>{% endfor %}
+            <span class="byterow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>{% for col in range(16) %}<span class="byte" style="color:gray">{{ '%02x' % col }}</span>{% endfor %}
             <br />
+            {#
     {% for row in range(input_bytes // 16 + 1) %}
     <div class="byteline"><span class="byterow">{{ '%05x' % row }}</span>
-    {% for col in range(16) %}<span class="byte" byteid="{{ input_file.tell() }}">{{ input_file.read(1).hex() }}</span>{% endfor %}</div>
+        {% for col in range(16) %}<span class="byte" byteid="{{ input_file.tell() }}">{{ input_file.read(1).hex() }}</span>{% endfor %}</div>
     {% endfor %}
+            #}
         </div>
-        <div class="bytes">
+        <div class="bytes">{#
             <br />
     {% for row in range(input_bytes // 16 + 1) %}
             <div class="byteline">{% for col in range(16) %}<span class="byte" byteid="{{ read_unicode.tell() }}">{{ read_unicode() }}</span>{% endfor %}</div>
-    {% endfor %}
+    {% endfor %}#}
         </div>
     </div>
     <div class="scrollcontainer">
