--- a/polyfile/templates/template.html
+++ b/polyfile/templates/template.html
@@ -64,6 +64,10 @@
     <div class="scrollcontainer">
         <div class="scrollheightproxy"></div>
     </div>
+    <div class="readablebyteswrapper">
+        <br />
+        <div class="readablebytes"></div>
+    </div>
 </div>
 
 {#
