--- a/polyfile/templates/template.html
+++ b/polyfile/templates/template.html
@@ -21,7 +21,7 @@
 <li>
     {% if 'children' in match and match['children'] %}
     <input type="checkbox" {{'checked="checked" ' if first}}id="match{{ match['uid'] }}" />
-    <label class="tree_label" for="match{{ match['uid'] }}" matchbyte="{{ match['global_offset'] }}" matchlength="{{ match['length'] }}">{{ match['type'] }}</label>
+    <label class="tree_label" for="match{{ match['uid'] }}" matchbyte="{{ match['global_offset'] }}" matchlength="{{ match['length'] }}">{{ match['display_name'] }}</label>
     <ul>
         {% for child in match['children'] %}
         {{ render_match(child, False) }}
