--- a/polyfile/templates/template.html
+++ b/polyfile/templates/template.html
@@ -21,14 +21,24 @@
 <li>
     {% if 'children' in match and match['children'] %}
     <input type="checkbox" {{'checked="checked" ' if first}}id="match{{ match['uid'] }}" />
-    <label class="tree_label" for="match{{ match['uid'] }}" matchbyte="{{ match['global_offset'] }}" matchlength="{{ match['length'] }}">{{ match['display_name'] }}</label>
+    <label class="tree_label" for="match{{ match['uid'] }}" matchbyte="{{ match['global_offset'] }}" matchlength="{{ match['length'] }}">
+        {{ match['display_name'] }}{% if match['img_data'] %}
+        <span class="tree_custom">
+            <img src="{{ match['img_data'] }}" style="max-width: 8em;" />
+        </span>{% endif %}
+    </label>
     <ul>
         {% for child in match['children'] %}
         {{ render_match(child, False) }}
         {% endfor %}
     </ul>
     {% else %}
-    <span class="tree_label" matchbyte="{{ match['global_offset'] }}" matchlength="{{ match['length'] }}">{{ match['type'] }}</span>
+    <span class="tree_label" matchbyte="{{ match['global_offset'] }}" matchlength="{{ match['length'] }}">
+        {{ match['type'] }}{% if match['img_data'] %}
+        <span class="tree_custom">
+            <img src="{{ match['img_data'] }}" style="max-width: 8em;" />
+        </span>{% endif %}
+    </span>
     {% endif %}
 </li>
 {%- endmacro %}
