Adds download links for each file match

--- a/polyfile/templates/hexdump.css
+++ b/polyfile/templates/hexdump.css
@@ -42,6 +42,16 @@ label.tree_label { cursor: pointer; }
 
 label.tree_label:hover { color: #666; }
 
+label.tree_label:hover > .download {
+  display: block;
+  float: right;
+}
+
+.download {
+  display: none;
+  color: blue;
+}
+
 label.tree_label:before {
   background: #000;
   color: #fff;
