Propagate file extensions through the matches

--- a/polyfile/templates/template.html
+++ b/polyfile/templates/template.html
@@ -32,7 +32,7 @@
 <br />
 
 {% macro render_match_name(match, first) -%}
-<a href="#" class="download" title="download" onclick="downloadFile({{ match['offset'] }}, {{ match['size'] }}, '{{ match['type'] }}')">⇩</a>
+<a href="#" class="download" title="download" onclick="downloadFile({{ match['offset'] }}, {{ match['size'] }}, '{{ match['type'] }}', '{{ match['extension'] }}')">⇩</a>
 {{ match['name'] }}{% if not first %}<br />
 <small style="color: gray;">{{ match['size'] }} bytes @ {{ '0x%0X' % match['offset'] }}</small>
 {% endif %}{% if match['decoded'] %}<br />
